# avbot

./: .gitignore  .gitmodules  .travis.yml  AUTHORS  CMakeLists.txt  ChangeLog  GetIP.cpp  IPLocation.cpp  IPLocation.h  Makefile  Makefile.am  README.md  acceptor_server.hpp  asio_impl.cpp  async_dir_walk.hpp  auto_question.hpp  auto_welcome.hpp  avbot-vc2010.sln  avbot.manifest  avbot.rc  avbot.rc.in  avbot.service.in  avbot.spec  avbot.spec.in  avbot.vcxproj  avbot.vcxproj.filters  avbot_log_search.cpp  avbot_rpc_server.cpp  avbot_rpc_server.hpp  avbot_vc_feed_input.hpp  avhttpd.kdev4  avloop.hpp  backtrace.cpp  base64.hpp  bootstrap.sh  botcmd.cpp  botctl.cpp  botctl.hpp  configure.ac  connector.hpp  (+42 more)
avboost/include/boost/: acceptor_server.hpp  async_coro_queue.hpp  avloop.hpp  bin_from_hex.hpp  cfunction.hpp  interthread_stream.hpp  invoke_wrapper.hpp  json_create_escapes_utf8.hpp  logging.hpp  splice_stream.hpp  stringencodings.hpp  timedcall.hpp  urlencode.hpp
avboost/include/boost/avproxy/: proxy_connect.hpp
avboost/include/boost/avproxy/detail/: proxy_socks5.hpp  proxy_ssl.hpp
avhttpd/include/: avhttpd.hpp
avhttpd/include/avhttpd/: read_request.hpp  settings.hpp  write_reponse.hpp
boost/: acceptor_server.hpp  async_dir_walk.hpp  avloop.hpp  base64.hpp  connector.hpp  consolestr.hpp  json_create_escapes_utf8.hpp  timedcall.hpp
boost/coro/: unyield.hpp  yield.hpp
coro/: coro.hpp  yield.hpp
deCAPTCHA/example/: decode.cpp
deCAPTCHA/include/deCAPTCHA/: anticaptcha_decoder.hpp  antigate_decoder.hpp  avplayer_free_decoder.hpp  channel_friend_decoder.hpp  deathbycaptcha_decoder.hpp  decaptcha.hpp  hydati_decoder.hpp  jsdati_decoder.hpp
example/: CMakeLists.txt  autoproxy.cpp  main.cpp  multi_proxychain.cpp
extension/: CMakeLists.txt  Makefile.am  README.md  bulletin.cpp  bulletin.hpp  dllextension.hpp  exchangerate.hpp  extension.cpp  extension.hpp  goldprice.hpp  html.hpp  httpagent.hpp  iplocation.hpp  joke.cpp  joke.hpp  luascript.cpp  luascript.hpp  metalprice.hpp  pythonscriptengine.cpp  pythonscriptengine.hpp  staticcontent.cpp  staticcontent.hpp  stock.hpp  stockprice.hpp  urlpreview.cpp  urlpreview.hpp  zmqpublisher.cpp  zmqpublisher.hpp
extension/libzmq/: CMakeLists.txt
extension/libzmq/tweetnacl/src/: tweetnacl.c
extension/luabind/luabind/detail/: format_signature.hpp
extension/luascript/: CMakeLists.txt  Makefile.am  luascript.cpp  luascript.hpp
extension/luascript/luabind/luabind/: object.hpp
gui/: avbotgui.hpp  win32.cpp
gui/qt-gui/: CMakeLists.txt  dialog.cpp  dialog.h  dialog.ui  qt-gui.h
gui/win32-gui/: win32.cpp
include/: avhttpd.hpp
include/avhttpd/: error_code.hpp  read_request.hpp  read_until.hpp  settings.hpp  write_reponse.hpp
include/boost/: acceptor_server.hpp  async_coro_queue.hpp  async_foreach.hpp  avloop.hpp  avproxy.hpp  base64.hpp  cfunction.hpp  json_create_escapes_utf8.hpp  json_parser_read.hpp  json_parser_write.hpp  multihandler.hpp  splice_stream.hpp  stringencodings.hpp  timedcall.hpp
include/boost/avproxy/: auto_proxychain.hpp  avproxy.hpp  proxies.hpp  proxy_connect.hpp
include/boost/avproxy/detail/: connect_condition.hpp  error.hpp  proxy_chain.hpp  proxy_error_mapper.hpp  proxy_http.hpp  proxy_tcp.hpp
include/boost/hash/: adler.hpp
include/qqwry/: ipdb.hpp
libavbot/: CMakeLists.txt  Makefile.am  async_image_checker.hpp  avbot.cpp  avbot.hpp  avbot_account_and_message_loop.cpp  avbot_account_and_message_loop.hpp  avbot_accounts.hpp
libavlog/: Makefile.am  avlog.cpp  avlog.hpp
libirc/: CMakeLists.txt  irc.cpp  irc.h  irc.hpp  libirc-vc2010.vcxproj  libirc-vc2012.sln  libirc-vc2012.vcxproj  libirc-vc2012.vcxproj.filters  test.cpp
libjoke/: CMakeLists.txt  Makefile.am  joke.cpp  joke.hpp
libmailexchange/: CMakeLists.txt  Makefile.am  internet_mail_format.hpp  libmailexchange.vcxproj  libmailexchange.vcxproj.filters  mx.hpp  pop3.cpp  pop3.hpp  pop3test.cpp  smtp.cpp  smtp.hpp  smtptest.cpp
libpop3/: CMakeLists.txt  pop3.cpp  pop3.hpp  test.cpp
libs/: main.lua
libwebqq/include/libwebqq/: webqq.hpp
libwebqq/src/: webqq.cpp
libwebqq/src/impl/: webqq_buddy_info.hpp  webqq_group_list.hpp  webqq_hash.hpp  webqq_impl.cpp  webqq_impl.hpp
libxmpp/: CMakeLists.txt  Makefile.am  libxmpp.vcxproj  libxmpp.vcxproj.filters  test.cpp  xmpp.cpp  xmpp.h  xmpp.hpp  xmpp_impl.cpp  xmpp_impl.h  xmpp_impl.hpp
libxmpp/gloox/: CMakeLists.txt  Makefile.am  config.h.unix  config.h.unix.in  configure.ac  gloox-vs2010.vcproj  gloox-vs2010.vcxproj  gloox-vs2010.vcxproj.filters  gloox.vcproj
libxmpp/gloox/gloox/: Makefile.am  clientbase.cpp  config.h  macros.h  siprofileft.cpp  siprofileft.h  tlsdefault.cpp  tlsopensslserver.cpp
libxmpp/iksemel/: CMakeLists.txt  configure
libxmpp/iksemel/src/: stream.c
libxmpp/src/: xmpp.cpp  xmpp_impl.cpp  xmpp_impl.hpp
libxmpp/src/gloox/: CMakeLists.txt  configure.ac
libxmpp/src/gloox/gloox/: Makefile.am  amp.cpp  clientbase.cpp  config.h  macros.h  stanza.cpp  tlsdefault.cpp  tlsopensslbase.cpp  util.h
lisp/: CMakeLists.txt  fork.hpp  main.cpp  process.hpp
openssl/include/openssl/: opensslconf.h
openssl/lib64/: zlib.lib
process/boost/process/detail/: pipe.hpp  win32_ops.hpp
qqwry/include/qqwry/: ipdb.hpp
qt-gui/: CMakeLists.txt  avbot-gui.pro  dialog.cpp  dialog.h  dialog.ui
rpc/: CMakeLists.txt  server.cpp  server.hpp
soci/src/backends/sqlite3/: blob.cpp
test/: test.cpp
vcproject/getip/: getip.vcxproj
